--- a/ docker-compose.yml
+++ b/ docker-compose.yml
@@ -9,10 +9,11 @@ services:
   kafka:
     image: confluentinc/cp-kafka:7.3.0
     ports:
-      - "9094:9094"
+      - "9093:9092"  # Expose port 9092 inside container as 9093 outside
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9094
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://host.docker.internal:9093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
